CloudFormation/stack-with-parameters.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: To Launch Instances Using CloudFormation

Parameters:
  FindAMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/canonical/ubuntu/server/24.04/stable/current/amd64/hvm/ebs-gp3/ami-id

  KeyPairName:
    Description: Name of an existing key
    Type: String

  SecGroupName:
    Description: Enter the name of the Security Group you want to create
    Type: String

Resources:
  myEC2instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref FindAMI
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !Ref mySecGroup

  mySecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref SecGroupName
      GroupDescription: Allows SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  myStaticIp:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref myEC2instance
      Tags:
        - Key: Name
          Value: MyEIP


#  aws cloudformation create-stack --stack-name stack1 --template-body file://{filename}.yaml (Create Instance)
#  aws cloudformation update-stack --stack-name stack1 --template-body file://{filename}.yaml (Update Existing Instance)
#  aws cloudformation delete-stack --stack-name stack1 (Delete Instance)
#  For this go to Dashboard > search cloudFormation > go to Templates > View in infrastructure composer > Template > validate > update
